--- a/package.json
+++ b/package.json
@@ -2,6 +2,6 @@
     "private": true,
     "workspaces": ["example", "use-spritesheet"],
     "scripts": {
-        "build": "cp README.md packages/use-spritesheet/README.md && cd packages/use-spritesheet && yarn build && cd ../example && yarn build"
+        "build": "cp README.md use-spritesheet/README.md && cd use-spritesheet && yarn build && cd ../example && yarn build"
       }
 }
